@@ -18,10 +18,11 @@ Bulletins:
 Carnet de notes:
 - Facilité de transfert des notes d'un enseignement à un autre dans le cas 
   d'un changement de groupe d'élève dans une même classe.
+- Possibilité de choisir entre nom complet et nom court des évaluations dans les relevés de notes.
 
 Cahiers de textes 2:
 - Ajout d'une visionneuse Instrumenpoche.
-- Mise à jour de l'app GeoGebra.
+- Mise à jour de l'appli GeoGebra.
 - Possibilité de copier d'un clic le code source HTML d'une vignette.
 
 Discipline:
@@ -35,6 +36,9 @@ Orientation:
 
 AID:
 - Possibilité de désigner comme "professeur" un compte scolarité ou cpe.
+- Possibilité de déléguer la gestion de catégories à des personnels (scolarité, 
+  cpe ou professeur).
+- Possibilité de déclarer des professeurs, gestionnaires, super-gestionnaires par lots.
 
 Épreuves blanches:
 - Possibilité d'exporter les notes en CSV sur un autre référentiel que 20.
